fix close button on mobile

--- a/src/components/VideoModal/styles.module.scss
+++ b/src/components/VideoModal/styles.module.scss
@@ -16,9 +16,9 @@
   left: 50%;
   transform: translate(-50%, -50%);
   width: 280px;
-  height: 330px;
+  height: 380px;
   box-shadow: 0 1px 40px 0 rgba(50, 47, 68, 0.2);
-  padding: 1.5em;
+  padding: 2em 1.5em;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -37,14 +37,10 @@
   font-family: $sans !important;
 }
 
-.buttonContainer {
-  display: flex;
-  justify-content: flex-end;
-  width: 100%;
-  height: 60px;
-}
-
 .closeButton {
   background-color: transparent;
   border: 0;
+  position: absolute;
+  top: 0.5em;
+  right: 1.5em;
 }
